[gd_scene load_steps=5 format=3 uid="uid://cfxe2aaigorpf"]

[ext_resource type="Script" path="res://Scripts/PlayerController.gd" id="1_rb7ic"]
[ext_resource type="Texture2D" uid="uid://c6yawqmuniw5u" path="res://Sprites/Ship.png" id="2_7rvgm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c5sdk"]
radius = 53.6323

[sub_resource type="CircleShape2D" id="CircleShape2D_sax5f"]
radius = 12.1161

[node name="Player" type="RigidBody2D"]
position = Vector2(550, 300)
lock_rotation = true
script = ExtResource("1_rb7ic")
metadata/Type = "Player"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-6.10352e-05, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3.595, 0)
shape = SubResource("CircleShape2D_c5sdk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.595, 0)
scale = Vector2(3.88, 3.88)
shape = SubResource("CircleShape2D_sax5f")

[node name="ProjectileSpawn" type="Node2D" parent="."]

[node name="ProjectileSpawnPoint" type="Node2D" parent="ProjectileSpawn"]
position = Vector2(80, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_7rvgm")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true
position_smoothing_speed = 15.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
