[gd_scene load_steps=3 format=3 uid="uid://cfxe2aaigorpf"]

[ext_resource type="Script" path="res://Scripts/PlayerController.gd" id="1_rb7ic"]
[ext_resource type="Texture2D" uid="uid://c6yawqmuniw5u" path="res://Sprites/Ship.png" id="2_7rvgm"]

[node name="Player" type="RigidBody2D"]
position = Vector2(550, 300)
script = ExtResource("1_rb7ic")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_7rvgm")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
scale = Vector2(0.2, 0.2)
polygon = PackedVector2Array(-95.0009, -245, -40.0007, -210, 39.9993, -210, 99.9991, -245, 150, -100, 255, 104.999, 220.001, 199.999, 165.001, 239.999, 100.001, 225, -94.9991, 225, -159.999, 245, -229.999, 175.001, -250, 105.001, -145, -99.9995)

[node name="ProjectileSpawnPoint2" type="Node2D" parent="."]
position = Vector2(161, 0)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
